# daios

./: .dockerignore  .env.example  .gitignore  BACKEND_REVIEW.md  FEAT-FIX.md  Makefile  README.md  alembic.ini  backend.docker-compose.yml  base.docker-compose.yml  env.example  frontend.docker-compose.yml  infra.docker-compose.yml  new_feat.md  nginx.docker-compose.yml  pyproject.toml  ruff.toml  upper.py
.github/workflows/: deploy.yml
backend/: __main__.py
backend/agents/: base.py  content_agent.py  context_agent.py  evening_agent.py  orchestrator.py  task_agent.py  workout_agent.py
backend/api/: backlog.py  debug.py  diary.py  focus.py  notes.py  schemas.py  settings.py  tasks.py  webhooks.py  workouts.py
backend/auth/: examples.json  guards.py
backend/bot/: __main__.py  _http.py  formatters.py  ioc.py  keyboards.py  tg_http.py  utils.py
backend/core/: config.py  db.py  logging.py  minio_client.py  providers.py  redis.py  timing_middleware.py
backend/integrations/: base.py  bus_schedule.py  google_sheets.py  news.py  rss.py  strava.py  telegram.py  vk.py  weather.py  youtube.py
backend/logbot/: __main__.py  ioc.py  middlewares.py
backend/migrations/: env.py
backend/models/: __init__.py  backlog.py  base.py  completed_workout.py  content.py  diary.py  focus.py  note.py  schedule.py  settings.py  task.py  workout_cache.py
backend/repositories/: backlog_repo.py  base.py  completed_workout_repo.py  content_repo.py  diary_repo.py  focus_repo.py  note_repo.py  settings_repo.py  task_repo.py
frontend/: package.json
scripts/: strava_register_webhook.py
(+72 files in other folders)
