[project]
name = "daios"
version = "0.1.0"
description = "Daily AI Operating System"
requires-python = ">=3.12"

dependencies = [
    # Web
    "litestar[standard]>=2.9",
    # AI / Agents
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    # DB
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Cache / Queue
    "redis[hiredis]>=5.0",
    # Storage
    "minio>=7.2",
    # Telegram
    "aiogram>=3.9",
    # Scheduler
    "apscheduler>=3.10",
    # Config / Validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # HTTP client
    "httpx>=0.27",
    "aiohttp-socks>=0.8",
    # Integrations
    "feedparser>=6.0",
    "gspread>=6.1",
    "google-auth>=2.29",
    "beautifulsoup4>=4.12",
    "dishka>=1.9.1",
    "valkey>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
